[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/editor/FileAccessCtrl/FileAccessCtrl.gd" type="Script" id=1]

[node name="FileAccessCtrl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -208.0
margin_right = 308.0
margin_bottom = 208.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.mmlv" )
show_hidden_files = true
current_dir = "C:/Users"
current_path = "C:/Users/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -208.0
margin_right = 308.0
margin_bottom = 208.0
resizable = true
access = 2
filters = PoolStringArray( "*.mmlv" )
current_dir = "C:/Users"
current_path = "C:/Users/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
